--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,7 @@
 :root {
-  --primary: #00b37e;
+  --primary: #8900b3;
   --background: #121214;
-  --text: #fff;
+  --text: #f6f6f6;
   --caption: #8d8d99;
   --gray: #e1e1e6;
   --background-light: rgba(255, 255, 255, 0.05);
@@ -24,4 +24,9 @@ body {
 button {
   font-family: 'Poppins', sans-serif;
   cursor: pointer;
+}
+
+::selection {
+  color: var(--text);
+  background: var(--primary);
 }
